--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@
 h1{
 	text-align:center;
 }
+h2{
+	text-align:center;
+}
 body{
 	background-color: #cccccc;
 }
@@ -23,4 +26,5 @@ a{
 li{
 	list-style-type:none;
 }
+
 
